--- a/BusinessAdapter.Console/BusinessAdapter.Console.csproj
+++ b/BusinessAdapter.Console/BusinessAdapter.Console.csproj
@@ -4,13 +4,14 @@
 		<TargetFramework>net8.0</TargetFramework>
 		<OutputType>Exe</OutputType>
 		<PublishSingleFile>true</PublishSingleFile>
-		<SelfContained>true</SelfContained>
+		<SelfContained>false</SelfContained>
 		<AssemblyName>Schleupen.AS4.BusinessAdapter.Console</AssemblyName>
 		<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
 	</PropertyGroup>
 	<ItemGroup>
 	  <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
 	  <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
+	  <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.6" />
 	</ItemGroup>
 	<ItemGroup>
 	  <ProjectReference Include="..\BusinessAdapter\BusinessAdapter.csproj" />
