--- a/BusinessAdapter.Console.UnitTests/BusinessAdapter.Console.UnitTests.csproj
+++ b/BusinessAdapter.Console.UnitTests/BusinessAdapter.Console.UnitTests.csproj
@@ -3,8 +3,15 @@
 	<PropertyGroup>
 		<TargetFramework>net8.0</TargetFramework>
 		<AssemblyName>Schleupen.AS4.BusinessAdapter.Console.UnitTests</AssemblyName>
+		<ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>None</ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>
 	</PropertyGroup>
 	<ItemGroup>
 	  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
+	  <PackageReference Include="Moq" Version="4.20.70" />
+	  <PackageReference Include="NUnit" Version="4.1.0" />
+	  <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
+	</ItemGroup>
+	<ItemGroup>
+	  <ProjectReference Include="..\BusinessAdapter.Console\BusinessAdapter.Console.csproj" />
 	</ItemGroup>
 </Project>
