--- a/BusinessAdapter.Console.UnitTests/BusinessAdapter.Console.UnitTests.csproj
+++ b/BusinessAdapter.Console.UnitTests/BusinessAdapter.Console.UnitTests.csproj
@@ -10,6 +10,7 @@
 	  <PackageReference Include="Moq" Version="4.20.70" />
 	  <PackageReference Include="NUnit" Version="4.1.0" />
 	  <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
+	  <PackageReference Include="JunitXml.TestLogger" Version="3.1.12" />
 	</ItemGroup>
 	<ItemGroup>
 	  <ProjectReference Include="..\BusinessAdapter.Console\BusinessAdapter.Console.csproj" />
