--- a/BusinessAdapter.UnitTests/BusinessAdapter.UnitTests.csproj
+++ b/BusinessAdapter.UnitTests/BusinessAdapter.UnitTests.csproj
@@ -11,7 +11,8 @@
 	  <EmbeddedResource Include="Certificates\Resources\client.pfx" />
 	</ItemGroup>
 	<ItemGroup>
-	  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
+	  <PackageReference Include="JunitXml.TestLogger" Version="3.1.12" />
+	  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
 	  <PackageReference Include="Moq" Version="4.20.70" />
 	  <PackageReference Include="NUnit" Version="3.14.0" />
 	  <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
