* extract MP-Logic into BusinessAdapter.MP.csproj + BusinessAdapter.MP.Console.csproj * generalize JwtHelper.cs

--- a/BusinessAdapter.UnitTests/BusinessAdapter.UnitTests.csproj
+++ b/BusinessAdapter.UnitTests/BusinessAdapter.UnitTests.csproj
@@ -18,6 +18,8 @@
         <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
     </ItemGroup>
 	<ItemGroup>
+	  <ProjectReference Include="..\BusinessAdapter.MP.Console\BusinessAdapter.MP.Console.csproj" />
+	  <ProjectReference Include="..\BusinessAdapter.MP\BusinessAdapter.MP.csproj" />
 	  <ProjectReference Include="..\BusinessAdapter\BusinessAdapter.csproj" />
 	</ItemGroup>
 </Project>
