--- a/BusinessAdapter.Console.UnitTests/BusinessAdapter.Console.UnitTests.csproj
+++ b/BusinessAdapter.Console.UnitTests/BusinessAdapter.Console.UnitTests.csproj
@@ -14,5 +14,6 @@
 	</ItemGroup>
 	<ItemGroup>
 	  <ProjectReference Include="..\BusinessAdapter.Console\BusinessAdapter.Console.csproj" />
+	  <ProjectReference Include="..\BusinessAdapter.MP.Console\BusinessAdapter.MP.Console.csproj" />
 	</ItemGroup>
 </Project>
