--- a/BusinessAdapter.MP.Console/BusinessAdapter.MP.Console.csproj
+++ b/BusinessAdapter.MP.Console/BusinessAdapter.MP.Console.csproj
@@ -5,8 +5,9 @@
 		<OutputType>Exe</OutputType>
 		<PublishSingleFile>true</PublishSingleFile>
 		<SelfContained>false</SelfContained>
-		<AssemblyName>Schleupen.AS4.BusinessAdapter.Console</AssemblyName>
+		<AssemblyName>Schleupen.AS4.BusinessAdapter.MP.Console</AssemblyName>
 		<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+		<RootNamespace>Schleupen.AS4.BusinessAdapter.MP</RootNamespace>
 	</PropertyGroup>
 	<ItemGroup>
 	  <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
@@ -14,6 +15,7 @@
 	  <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.6" />
 	</ItemGroup>
 	<ItemGroup>
+	  <ProjectReference Include="..\BusinessAdapter.MP\BusinessAdapter.MP.csproj" />
 	  <ProjectReference Include="..\BusinessAdapter\BusinessAdapter.csproj" />
 	</ItemGroup>
 </Project>
