* add sample appsettings.Development.json for development purpose * shift configuration class to common project 'BusinessAdapter' -> needed from MP + FP.exe

--- a/BusinessAdapter.MP.Console/BusinessAdapter.MP.Console.csproj
+++ b/BusinessAdapter.MP.Console/BusinessAdapter.MP.Console.csproj
@@ -18,4 +18,9 @@
 	  <ProjectReference Include="..\BusinessAdapter.MP\BusinessAdapter.MP.csproj" />
 	  <ProjectReference Include="..\BusinessAdapter\BusinessAdapter.csproj" />
 	</ItemGroup>
+	<ItemGroup>
+	  <None Update="appsettings.Development.json">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </None>
+	</ItemGroup>
 </Project>
