--- a/BusinessAdapter.MP.Console/Properties/launchSettings.json
+++ b/BusinessAdapter.MP.Console/Properties/launchSettings.json
@@ -1,7 +1,10 @@
 {
   "profiles": {
     "BusinessAdapter.Console": {
-      "commandName": "Project"
+      "commandName": "Project",
+      "environmentVariables": {
+        "DOTNET_ENVIRONMENT": "Development"
+      }
     },
     "Container (Dockerfile)": {
       "commandName": "Docker"
