--- a/BusinessAdapter/BusinessAdapter.csproj
+++ b/BusinessAdapter/BusinessAdapter.csproj
@@ -6,6 +6,7 @@
 	</PropertyGroup>
 	<ItemGroup>
 	  <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
+	  <PackageReference Include="Microsoft.Extensions.Options" Version="8.0.0" />
 	  <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 	  <PackageReference Include="Polly" Version="8.4.0" />
 	  <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.6.0" />
