--- a/BusinessAdapter.MP.Console/appsettings.Development.json
+++ b/BusinessAdapter.MP.Console/appsettings.Development.json
@@ -1,12 +1,16 @@
 {
   "Adapter": {
-    "SendDirectory": "C:\\Send2",
-    "ReceiveDirectory": "C:\\Receive",
     "As4ConnectEndpoint": "https://erp.prod.as4.schleupen.cloud",
-    "DeliveryRetryCount": 3,
-    "DeliveryMessageLimitCount": 0,
-    "ReceivingRetryCount": 3,
-    "ReceivingMessageLimitCount": 0,
+    "Send": {
+      "Directory": "C:\\Adapter\\Send",
+      "RetryCount": 3,
+      "MessageLimitCount": 0
+    },
+    "Receive": {
+      "Directory": "C:\\Adapter\\Receive",
+      "RetryCount": 3,
+      "MessageLimitCount": 0
+    },
     "Marketpartners": [
       "9984617000002"
     ],
