--- a/BusinessAdapter.FP.Console/BusinessAdapter.FP.Console.csproj
+++ b/BusinessAdapter.FP.Console/BusinessAdapter.FP.Console.csproj
@@ -7,7 +7,7 @@
 		<SelfContained>false</SelfContained>
 		<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
 		<AssemblyName>Schleupen.AS4.BusinessAdapter.FP.Console</AssemblyName>
-		<RootNamespace>Schleupen.AS4.BusinessAdapter.FP.Console</RootNamespace>
+		<RootNamespace>Schleupen.AS4.BusinessAdapter.FP</RootNamespace>
 	</PropertyGroup>
 	<ItemGroup>
 	  <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
