added sendInterval for mp

--- a/BusinessAdapter.MP.Console/appsettings.Development.json
+++ b/BusinessAdapter.MP.Console/appsettings.Development.json
@@ -4,7 +4,8 @@
     "Send": {
       "Directory": "C:\\Adapter\\Send",
       "RetryCount": 3,
-      "MessageLimitCount": 0
+      "MessageLimitCount": 0,
+      "ScanInterval":  60
     },
     "Receive": {
       "Directory": "C:\\Adapter\\Receive",
