--- a/BusinessAdapter.UnitTests/appsettings.unittests.json
+++ b/BusinessAdapter.UnitTests/appsettings.unittests.json
@@ -4,7 +4,8 @@
     "Send": {
       "Directory": "./send",
       "RetryCount": 1,
-      "MessageLimitCount": 2
+      "MessageLimitCount": 2,
+      "ScanInterval": 1337
     },
     "Receive": {
       "Directory": "./receive",
