--- a/BusinessAdapter.UnitTests/appsettings.unittests.json
+++ b/BusinessAdapter.UnitTests/appsettings.unittests.json
@@ -3,9 +3,12 @@
     "As4ConnectEndpoint": "https://erp.prod.as4.schleupen.cloud",
     "Send": {
       "Directory": "./send",
-      "RetryCount": 1,
+      "Retry": {
+        "Count": 1,
+        "SleepDuration": "00:00:59"
+      },
       "MessageLimitCount": 2,
-      "ScanInterval": 1337
+      "ScanInterval": "00:00:44"
     },
     "Receive": {
       "Directory": "./receive",
