--- a/BusinessAdapter.FP.UnitTests/BusinessAdapter.FP.UnitTests.csproj
+++ b/BusinessAdapter.FP.UnitTests/BusinessAdapter.FP.UnitTests.csproj
@@ -9,12 +9,14 @@
         <PackageReference Include="JunitXml.TestLogger" Version="3.1.12" />
         <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
         <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
         <PackageReference Include="Moq" Version="4.20.70" />
         <PackageReference Include="NUnit" Version="3.14.0" />
         <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
     </ItemGroup>
 	<ItemGroup>
+	  <ProjectReference Include="..\BusinessAdapter.FP.Console\BusinessAdapter.FP.Console.csproj" />
 	  <ProjectReference Include="..\BusinessAdapter.FP\BusinessAdapter.FP.csproj" />
 	</ItemGroup>
 	<ItemGroup>
