Add FpFileRepositoryImplementation Adjust log messages

--- a/BusinessAdapter.FP.Console/appsettings.Development.json
+++ b/BusinessAdapter.FP.Console/appsettings.Development.json
@@ -4,13 +4,13 @@
     "Send": {
       "Directory": "C:\\Adapter\\Send",
       "RetryCount": 3,
-      "MessageLimitCount": 0,
-      "ScanInterval" :  60
+      "MessageLimitCount": 2,
+      "ScanInterval" :  "00:01:00"
     },
     "Receive": {
       "Directory": "C:\\Adapter\\Receive",
       "RetryCount": 3,
-      "MessageLimitCount": 0
+      "MessageLimitCount": 2
     },
     "Marketpartners": [
       "9984617000002"
