add test for FpFileRepositoryTest

--- a/BusinessAdapter.FP.Console/appsettings.Development.json
+++ b/BusinessAdapter.FP.Console/appsettings.Development.json
@@ -19,11 +19,11 @@
     "CertificateStoreName": "My"
   },
   "EICMapping": {
-    "10Y1001A1001A82H": { 
+    "5790000432752": {
       "Id": "1000000001",
       "Type": "BDEW"
     },
-    "10Y1001A1001A63L": {
+    "10X000000000RTEM": {
       "Id": "1000000002",
       "Type": "BDEW"
     }
