--- a/BusinessAdapter.FP.Console.UnitTests/BusinessAdapter.FP.Console.UnitTests.csproj
+++ b/BusinessAdapter.FP.Console.UnitTests/BusinessAdapter.FP.Console.UnitTests.csproj
@@ -2,7 +2,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<TargetFramework>net8.0</TargetFramework>
-		<AssemblyName>Schleupen.AS4.BusinessAdapter.Console.UnitTests</AssemblyName>
+		<AssemblyName>Schleupen.AS4.BusinessAdapter.FP.Console.UnitTests</AssemblyName>
 		<ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>None</ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>
 	</PropertyGroup>
 	<ItemGroup>
@@ -13,6 +13,6 @@
 	  <PackageReference Include="JunitXml.TestLogger" Version="3.1.12" />
 	</ItemGroup>
 	<ItemGroup>
-	  <ProjectReference Include="..\BusinessAdapter.MP.Console\BusinessAdapter.MP.Console.csproj" />
+	  <ProjectReference Include="..\BusinessAdapter.FP.Console\BusinessAdapter.FP.Console.csproj" />
 	</ItemGroup>
 </Project>
