use Retry Object [Count, SleepDuration] in config files and on SendMessageAdapterController.cs [FP]

--- a/BusinessAdapter.MP.Console/appsettings.Development.json
+++ b/BusinessAdapter.MP.Console/appsettings.Development.json
@@ -3,9 +3,12 @@
     "As4ConnectEndpoint": "https://erp.prod.as4.schleupen.cloud",
     "Send": {
       "Directory": "C:\\Adapter\\Send",
-      "RetryCount": 3,
+      "Retry": {
+        "Count": 1,
+        "SleepDuration": "00:00:10"
+      },
       "MessageLimitCount": 0,
-      "ScanInterval":  60
+      "ScanInterval" :  "00:01:00"
     },
     "Receive": {
       "Directory": "C:\\Adapter\\Receive",
