--- a/BusinessAdapter.FP.Console/appsettings.Development.json
+++ b/BusinessAdapter.FP.Console/appsettings.Development.json
@@ -3,7 +3,10 @@
     "As4ConnectEndpoint": "https://erp.prod.as4.schleupen.cloud",
     "Send": {
       "Directory": "C:\\Adapter\\Send",
-      "RetryCount": 3,
+      "Retry": {
+        "Count": 1,
+        "SleepDuration": "00:00:10"
+      },
       "MessageLimitCount": 2,
       "ScanInterval" :  "00:01:00"
     },
