* harmonize config values [Rend/Receive] * use new SleepDuration for Iteration MP+FP

--- a/BusinessAdapter.UnitTests/appsettings.unittests.json
+++ b/BusinessAdapter.UnitTests/appsettings.unittests.json
@@ -4,16 +4,20 @@
     "Send": {
       "Directory": "./send",
       "Retry": {
-        "Count": 1,
-        "SleepDuration": "00:00:59"
+        "Count": 11,
+        "SleepDuration": "00:00:11"
       },
-      "MessageLimitCount": 2,
-      "ScanInterval": "00:00:44"
+      "MessageLimitCount": 11,
+      "SleepDuration": "00:00:11"
     },
     "Receive": {
       "Directory": "./receive",
-      "RetryCount": 3,
-      "MessageLimitCount": 4
+      "Retry": {
+        "Count": 22,
+        "SleepDuration": "00:00:22"
+      },
+      "MessageLimitCount": 22,
+      "SleepDuration": "00:00:22"
     },
     "Marketpartners": [
       "9984617000002"
