review log messages

--- a/BusinessAdapter.MP.Console/appsettings.Development.json
+++ b/BusinessAdapter.MP.Console/appsettings.Development.json
@@ -7,13 +7,17 @@
         "Count": 1,
         "SleepDuration": "00:00:10"
       },
-      "MessageLimitCount": 0,
-      "ScanInterval" :  "00:01:00"
+      "MessageLimitCount": 2,
+      "SleepDuration" :  "00:01:00"
     },
     "Receive": {
       "Directory": "C:\\Adapter\\Receive",
-      "RetryCount": 3,
-      "MessageLimitCount": 0
+      "Retry": {
+        "Count": 1,
+        "SleepDuration": "00:00:10"
+      },
+      "SleepDuration" :  "00:01:00",
+      "MessageLimitCount": 2
     },
     "Marketpartners": [
       "9984617000002"
