--- a/BusinessAdapter.FP.Console/appsettings.Development.json
+++ b/BusinessAdapter.FP.Console/appsettings.Development.json
@@ -4,15 +4,19 @@
     "Send": {
       "Directory": "C:\\Adapter\\Send",
       "Retry": {
-        "Count": 1,
-        "SleepDuration": "00:00:10"
+        "Count": 3,
+        "SleepDuration": "00:00:05"
       },
       "MessageLimitCount": 2,
-      "ScanInterval" :  "00:01:00"
+      "SleepDuration" :  "00:00:10"
     },
     "Receive": {
       "Directory": "C:\\Adapter\\Receive",
-      "RetryCount": 3,
+      "Retry": {
+        "Count": 1,
+        "SleepDuration": "00:00:10"
+      },
+      "SleepDuration" :  "00:01:00",
       "MessageLimitCount": 2
     },
     "Marketpartners": [
