* rework README.md * publish self contained .exe * remove default value for As4ConnectEndpoint * set Send.MessageLimitCount to Int32.MaxValue ( based on original implementation ) * remove Unused Parameter from SendStatus.cs

--- a/BusinessAdapter.MP.Console/BusinessAdapter.MP.Console.csproj
+++ b/BusinessAdapter.MP.Console/BusinessAdapter.MP.Console.csproj
@@ -4,7 +4,7 @@
 		<TargetFramework>net8.0</TargetFramework>
 		<OutputType>Exe</OutputType>
 		<PublishSingleFile>true</PublishSingleFile>
-		<SelfContained>false</SelfContained>
+		<SelfContained>true</SelfContained>
 		<AssemblyName>Schleupen.AS4.BusinessAdapter.MP.Console</AssemblyName>
 		<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
 		<RootNamespace>Schleupen.AS4.BusinessAdapter.MP</RootNamespace>
