--- a/BusinessAdapter.FP.Console/BusinessAdapter.FP.Console.csproj
+++ b/BusinessAdapter.FP.Console/BusinessAdapter.FP.Console.csproj
@@ -4,7 +4,7 @@
 		<TargetFramework>net8.0</TargetFramework>
 		<OutputType>Exe</OutputType>
 		<PublishSingleFile>true</PublishSingleFile>
-		<SelfContained>false</SelfContained>
+		<SelfContained>true</SelfContained>
 		<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
 		<AssemblyName>Schleupen.AS4.BusinessAdapter.FP.Console</AssemblyName>
 		<RootNamespace>Schleupen.AS4.BusinessAdapter.FP</RootNamespace>
