Added polling of the FP inbox

--- a/BusinessAdapter.FP.Console/appsettings.Development.json
+++ b/BusinessAdapter.FP.Console/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "Adapter": {
-    "As4ConnectEndpoint": "https://erp.prod.as4.schleupen.cloud",
+    "As4ConnectEndpoint": "https://erp.as4.schleupen.cloud",
     "Send": {
       "Directory": "C:\\Adapter\\Send",
       "Retry": {
