Refactor of EIC Mapping

--- a/BusinessAdapter.FP.Console/appsettings.Development.json
+++ b/BusinessAdapter.FP.Console/appsettings.Development.json
@@ -28,11 +28,15 @@
   "EICMapping": {
     "5790000432752": {
       "Id": "1000000001",
-      "Type": "BDEW"
+      "Type": "BDEW",
+      "Bilanzkreis": "test",
+      "FpType": "test"
     },
     "10X000000000RTEM": {
       "Id": "1000000002",
-      "Type": "BDEW"
+      "Type": "BDEW",
+      "Bilanzkreis": "test",
+      "FpType": "test"
     }
   }
 }
