Refactored EICMapping to support multiple MpIds to EICs

--- a/BusinessAdapter.FP.Console/appsettings.Development.json
+++ b/BusinessAdapter.FP.Console/appsettings.Development.json
@@ -26,17 +26,27 @@
     "CertificateStoreName": "My"
   },
   "EICMapping": {
-    "5790000432752": {
-      "Id": "1000000001",
-      "Type": "BDEW",
-      "Bilanzkreis": "test",
-      "FpType": "test"
-    },
-    "10X000000000RTEM": {
-      "Id": "1000000002",
-      "Type": "BDEW",
-      "Bilanzkreis": "test",
-      "FpType": "test"
-    }
+    "1000000001" : [
+    {
+      "EIC" : "5790000432752",
+      "MpType" : "BDEW",
+      "Bilanzkreis" : "FINGRID",
+      "FpType" : "PPS"
+     },
+      {
+        "EIC" : "5790000432766",
+        "MpType" : "BDEW",
+        "Bilanzkreis" : "FINGRID",
+        "FpType" : "TPS"
+      }
+    ],
+      "1000000003" : [
+        {
+        "EIC" : "10X000000000RTEM",
+        "MpType" : "BDEW",
+        "Bilanzkreis" : "FINGRID",
+        "FpType" : "PPS"
+        }
+      ]
   }
 }
