--- a/BusinessAdapter.FP.UnitTests/appsettings.unittests.json
+++ b/BusinessAdapter.FP.UnitTests/appsettings.unittests.json
@@ -1,12 +1,26 @@
 {
   "EICMapping": {
-    "10Y1001A1001A82H": { 
-      "Id": "1000000001",
-      "Type": "BDEW"
-    },
-    "10Y1001A1001A63L": {
-      "Id": "1000000002",
-      "Type": "BDEW"
-    }
+    "1000000001" : [
+      {
+        "EIC" : "5790000432752",
+        "MpType" : "BDEW",
+        "Bilanzkreis" : "FINGRID",
+        "FpType" : "PPS"
+      },
+      {
+        "EIC" : "5790000432766",
+        "MpType" : "BDEW",
+        "Bilanzkreis" : "FINGRID",
+        "FpType" : "TPS"
+      }
+    ],
+    "1000000002" : [
+      {
+        "EIC" : "10X000000000RTEM",
+        "MpType" : "BDEW",
+        "Bilanzkreis" : "FINGRID",
+        "FpType" : "PPS"
+      }
+    ]
   }
 }
