--- a/BusinessAdapter.FP.Console/appsettings.Development.json
+++ b/BusinessAdapter.FP.Console/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "Adapter": {
-    "As4ConnectEndpoint": "https://erp.as4.schleupen.cloud",
+    "As4ConnectEndpoint": "https://erp.dev.as4-test.schleupen.cloud",
     "Send": {
       "Directory": "C:\\Adapter\\Send",
       "Retry": {
@@ -8,7 +8,7 @@
         "SleepDuration": "00:00:05"
       },
       "MessageLimitCount": 2,
-      "SleepDuration" :  "00:00:10"
+      "SleepDuration": "00:00:10"
     },
     "Receive": {
       "Directory": "C:\\Adapter\\Receive",
@@ -16,37 +16,38 @@
         "Count": 1,
         "SleepDuration": "00:00:10"
       },
-      "SleepDuration" :  "00:01:00",
+      "SleepDuration": "00:01:00",
       "MessageLimitCount": 2
     },
     "Marketpartners": [
-      "9984617000002"
+      "9984617000002",
+      "9984616000003"
     ],
     "CertificateStoreLocation": "LocalMachine",
     "CertificateStoreName": "My"
   },
   "EICMapping": {
-    "1000000001" : [
-    {
-      "EIC" : "5790000432752",
-      "MpType" : "BDEW",
-      "Bilanzkreis" : "FINGRID",
-      "FpType" : "PPS"
-     },
+    "9984617000002": [
       {
-        "EIC" : "5790000432766",
-        "MpType" : "BDEW",
-        "Bilanzkreis" : "FINGRID",
-        "FpType" : "TPS"
+        "EIC": "5790000432752",
+        "MpType": "BDEW",
+        "Bilanzkreis": "FINGRID",
+        "FpType": "PPS"
+      },
+      {
+        "EIC": "5790000432766",
+        "MpType": "BDEW",
+        "Bilanzkreis": "FINGRID",
+        "FpType": "TPS"
       }
     ],
-      "1000000003" : [
-        {
-        "EIC" : "10X000000000RTEM",
-        "MpType" : "BDEW",
-        "Bilanzkreis" : "FINGRID",
-        "FpType" : "PPS"
-        }
-      ]
+    "9984616000003": [
+      {
+        "EIC": "10X000000000RTEM",
+        "MpType": "BDEW",
+        "Bilanzkreis": "FINGRID",
+        "FpType": "PPS"
+      }
+    ]
   }
 }
