--- a/BusinessAdapter.FP.Console.UnitTests/appsettings.unittests.json
+++ b/BusinessAdapter.FP.Console.UnitTests/appsettings.unittests.json
@@ -1,15 +1,15 @@
 {
   "Send": {
-  "Directory": "C:\\Adapter\\Send",
-  "Retry": {
-    "Count": 3,
-    "SleepDuration": "00:00:05"
+    "Directory": ".",
+    "Retry": {
+      "Count": 3,
+      "SleepDuration": "00:00:05"
+    },
+    "MessageLimitCount": 2,
+    "SleepDuration": "00:00:10"
   },
-  "MessageLimitCount": 2,
-  "SleepDuration": "00:00:10"
-},
   "Receive": {
-    "Directory": "C:\\Adapter\\Receive",
+    "Directory": ".",
     "Retry": {
       "Count": 1,
       "SleepDuration": "00:00:10"
@@ -18,26 +18,26 @@
     "MessageLimitCount": 2
   },
   "EICMapping": {
-    "1000000001" : [
+    "1000000001": [
       {
-        "EIC" : "5790000432752",
-        "MpType" : "BDEW",
-        "Bilanzkreis" : "FINGRID",
-        "FpType" : "PPS"
+        "EIC": "5790000432752",
+        "MpType": "BDEW",
+        "Bilanzkreis": "FINGRID",
+        "FpType": "PPS"
       },
       {
-        "EIC" : "5790000432766",
-        "MpType" : "BDEW",
-        "Bilanzkreis" : "FINGRID",
-        "FpType" : "TPS"
+        "EIC": "5790000432766",
+        "MpType": "BDEW",
+        "Bilanzkreis": "FINGRID",
+        "FpType": "TPS"
       }
     ],
-    "1000000002" : [
+    "1000000002": [
       {
-        "EIC" : "10X000000000RTEM",
-        "MpType" : "BDEW",
-        "Bilanzkreis" : "FINGRID",
-        "FpType" : "PPS"
+        "EIC": "10X000000000RTEM",
+        "MpType": "BDEW",
+        "Bilanzkreis": "FINGRID",
+        "FpType": "PPS"
       }
     ]
   }
