--- a/BusinessAdapter.FP.Console/appsettings.Development.json
+++ b/BusinessAdapter.FP.Console/appsettings.Development.json
@@ -30,23 +30,23 @@
     "9984617000002": [
       {
         "EIC": "5790000432752",
-        "MpType": "BDEW",
+        "MarktpartnerTyp": "BDEW",
         "Bilanzkreis": "FINGRID",
-        "FpType": "PPS"
+        "FahrplanHaendlertyp": "PPS"
       },
       {
         "EIC": "5790000432766",
-        "MpType": "BDEW",
+        "MarktpartnerTyp": "BDEW",
         "Bilanzkreis": "FINGRID",
-        "FpType": "TPS"
+        "FahrplanHaendlertyp": "TPS"
       }
     ],
     "9984616000003": [
       {
         "EIC": "10X000000000RTEM",
-        "MpType": "BDEW",
+        "MarktpartnerTyp": "BDEW",
         "Bilanzkreis": "FINGRID",
-        "FpType": "PPS"
+        "FahrplanHaendlertyp": "PPS"
       }
     ]
   }
