--- a/BusinessAdapter.FP.UnitTests/appsettings.unittests.json
+++ b/BusinessAdapter.FP.UnitTests/appsettings.unittests.json
@@ -3,23 +3,23 @@
     "1000000001" : [
       {
         "EIC" : "5790000432752",
-        "MpType" : "BDEW",
+        "MarktpartnerTyp" : "BDEW",
         "Bilanzkreis" : "FINGRID",
-        "FpType" : "PPS"
+        "FahrplanHaendlertyp" : "PPS"
       },
       {
         "EIC" : "5790000432766",
-        "MpType" : "BDEW",
+        "MarktpartnerTyp" : "BDEW",
         "Bilanzkreis" : "FINGRID",
-        "FpType" : "TPS"
+        "FahrplanHaendlertyp" : "TPS"
       }
     ],
     "1000000002" : [
       {
         "EIC" : "10X000000000RTEM",
-        "MpType" : "BDEW",
+        "MarktpartnerTyp" : "BDEW",
         "Bilanzkreis" : "FINGRID",
-        "FpType" : "PPS"
+        "FahrplanHaendlertyp" : "PPS"
       }
     ]
   }
