--- a/BusinessAdapter.FP.Console.UnitTests/appsettings.unittests.json
+++ b/BusinessAdapter.FP.Console.UnitTests/appsettings.unittests.json
@@ -1,6 +1,15 @@
 {
+  "Adapter": {
+    "As4ConnectEndpoint": "https://erp.dev.as4-test.schleupen.cloud",
+    "Marketpartners": [
+      "9984617000002",
+      "9984616000003"
+    ],
+    "CertificateStoreLocation": "LocalMachine",
+    "CertificateStoreName": "My"
+  },
   "Send": {
-    "Directory": ".",
+    "Directory": "C:\\Adapter\\Send",
     "Retry": {
       "Count": 3,
       "SleepDuration": "00:00:05"
@@ -9,7 +18,7 @@
     "SleepDuration": "00:00:10"
   },
   "Receive": {
-    "Directory": ".",
+    "Directory": "C:\\Adapter\\Receive",
     "Retry": {
       "Count": 1,
       "SleepDuration": "00:00:10"
@@ -18,7 +27,7 @@
     "MessageLimitCount": 2
   },
   "EICMapping": {
-    "1000000001": [
+    "9984617000002": [
       {
         "EIC": "5790000432752",
         "MarktpartnerTyp": "BDEW",
@@ -32,7 +41,7 @@
         "FahrplanHaendlertyp": "TPS"
       }
     ],
-    "1000000002": [
+    "9984616000003": [
       {
         "EIC": "10X000000000RTEM",
         "MarktpartnerTyp": "BDEW",
