--- a/BusinessAdapter.FP.Console.UnitTests/appsettings.unittests.json
+++ b/BusinessAdapter.FP.Console.UnitTests/appsettings.unittests.json
@@ -9,7 +9,7 @@
     "CertificateStoreName": "My"
   },
   "Send": {
-    "Directory": "C:\\Adapter\\Send",
+    "Directory": ".",
     "Retry": {
       "Count": 3,
       "SleepDuration": "00:00:05"
@@ -18,7 +18,7 @@
     "SleepDuration": "00:00:10"
   },
   "Receive": {
-    "Directory": "C:\\Adapter\\Receive",
+    "Directory": ".",
     "Retry": {
       "Count": 1,
       "SleepDuration": "00:00:10"
