--- a/BusinessAdapter.FP/BusinessAdapter.FP.csproj
+++ b/BusinessAdapter.FP/BusinessAdapter.FP.csproj
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<TargetFramework>net8.0</TargetFramework>
+		<TargetFramework>netstandard2.0</TargetFramework>
 		<AssemblyName>Schleupen.AS4.BusinessAdapter.FP</AssemblyName>
 		<RootNamespace>Schleupen.AS4.BusinessAdapter.FP</RootNamespace>
+		<LangVersion>latestmajor</LangVersion>
 	</PropertyGroup>
 	<ItemGroup>
 	  <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
