--- a/BusinessAdapter/BusinessAdapter.csproj
+++ b/BusinessAdapter/BusinessAdapter.csproj
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<TargetFramework>net8.0</TargetFramework>
+		<TargetFramework>netstandard2.0</TargetFramework>
 		<AssemblyName>Schleupen.AS4.BusinessAdapter</AssemblyName>
+		<LangVersion>12</LangVersion>
 	</PropertyGroup>
 	<ItemGroup>
 	  <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
