--- a/BusinessAdapter.FP/BusinessAdapter.FP.csproj
+++ b/BusinessAdapter.FP/BusinessAdapter.FP.csproj
@@ -5,6 +5,7 @@
 		<AssemblyName>Schleupen.AS4.BusinessAdapter.FP</AssemblyName>
 		<RootNamespace>Schleupen.AS4.BusinessAdapter.FP</RootNamespace>
 		<LangVersion>latestmajor</LangVersion>
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 	</PropertyGroup>
 	<ItemGroup>
 	  <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
