--- a/BusinessAdapter/BusinessAdapter.csproj
+++ b/BusinessAdapter/BusinessAdapter.csproj
@@ -3,7 +3,8 @@
 	<PropertyGroup>
 		<TargetFramework>netstandard2.0</TargetFramework>
 		<AssemblyName>Schleupen.AS4.BusinessAdapter</AssemblyName>
-		<LangVersion>12</LangVersion>
+		<LangVersion>latestmajor</LangVersion>
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 	</PropertyGroup>
 	<ItemGroup>
 	  <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
