--- a/BusinessAdapter.FP/BusinessAdapter.FP.csproj
+++ b/BusinessAdapter.FP/BusinessAdapter.FP.csproj
@@ -6,6 +6,7 @@
 		<RootNamespace>Schleupen.AS4.BusinessAdapter.FP</RootNamespace>
 		<LangVersion>latestmajor</LangVersion>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<KeyContainerName>Schleupen.CS.Key_3.0</KeyContainerName>
 	</PropertyGroup>
 	<ItemGroup>
 	  <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
