--- a/BusinessAdapter/BusinessAdapter.csproj
+++ b/BusinessAdapter/BusinessAdapter.csproj
@@ -5,18 +5,14 @@
 		<AssemblyName>Schleupen.AS4.BusinessAdapter</AssemblyName>
 		<LangVersion>latestmajor</LangVersion>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<KeyContainerName>Schleupen.CS.Key_3.0</KeyContainerName>
 	</PropertyGroup>
 	<ItemGroup>
-	  <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
-	  <PackageReference Include="Microsoft.Extensions.Options" Version="8.0.0" />
-	  <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
-	  <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-	  <PackageReference Include="Polly" Version="8.4.0" />
-	  <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.6.0" />
-	</ItemGroup>
-	<ItemGroup>
-	  <Reference Include="Microsoft.Extensions.Configuration.Abstractions">
-	    <HintPath>C:\Program Files\dotnet\shared\Microsoft.AspNetCore.App\8.0.6\Microsoft.Extensions.Configuration.Abstractions.dll</HintPath>
-	  </Reference>
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
+		<PackageReference Include="Microsoft.Extensions.Options" Version="8.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+		<PackageReference Include="Polly" Version="8.4.0" />
+		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.6.0" />
 	</ItemGroup>
 </Project>
