--- a/BusinessAdapter.FP.UnitTests/appsettings.unittests.json
+++ b/BusinessAdapter.FP.UnitTests/appsettings.unittests.json
@@ -5,13 +5,13 @@
         "EIC" : "5790000432752",
         "MarktpartnerTyp" : "BDEW",
         "Bilanzkreis" : "FINGRID",
-        "FahrplanHaendlertyp" : "PPS"
+        "FahrplanHaendlerTyp" : "PPS"
       },
       {
         "EIC" : "5790000432766",
         "MarktpartnerTyp" : "BDEW",
         "Bilanzkreis" : "FINGRID",
-        "FahrplanHaendlertyp" : "TPS"
+        "FahrplanHaendlerTyp" : "TPS"
       }
     ],
     "1000000002" : [
@@ -19,7 +19,7 @@
         "EIC" : "10X000000000RTEM",
         "MarktpartnerTyp" : "BDEW",
         "Bilanzkreis" : "FINGRID",
-        "FahrplanHaendlertyp" : "PPS"
+        "FahrplanHaendlerTyp" : "PPS"
       }
     ]
   }
