--- a/BusinessAdapter.FP.Console/appsettings.Development.json
+++ b/BusinessAdapter.FP.Console/appsettings.Development.json
@@ -32,13 +32,13 @@
         "EIC": "5790000432752",
         "MarktpartnerTyp": "BDEW",
         "Bilanzkreis": "FINGRID",
-        "FahrplanHaendlertyp": "PPS"
+        "FahrplanHaendlerTyp": "PPS"
       },
       {
         "EIC": "5790000432766",
         "MarktpartnerTyp": "BDEW",
         "Bilanzkreis": "FINGRID",
-        "FahrplanHaendlertyp": "TPS"
+        "FahrplanHaendlerTyp": "TPS"
       }
     ],
     "9984616000003": [
@@ -46,7 +46,7 @@
         "EIC": "10X000000000RTEM",
         "MarktpartnerTyp": "BDEW",
         "Bilanzkreis": "FINGRID",
-        "FahrplanHaendlertyp": "PPS"
+        "FahrplanHaendlerTyp": "PPS"
       }
     ]
   }
