used prebuild version from AzureDevOps server to run integrative tests fix AssemblyName BusinessAdapter.FP.IntegrativeTests -> 'Schleupen.AS4.BusinessAdapter.FP.IntegrativeTests'

--- a/BusinessAdapter.FP.IntegrativeTests/BusinessAdapter.FP.IntegrativeTests.csproj
+++ b/BusinessAdapter.FP.IntegrativeTests/BusinessAdapter.FP.IntegrativeTests.csproj
@@ -5,7 +5,7 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <AssemblyName>BusinessAdapter.FP.IntegrativeTests</AssemblyName>
+        <AssemblyName>Schleupen.AS4.BusinessAdapter.FP.IntegrativeTests</AssemblyName>
     </PropertyGroup>
     <ItemGroup>
     <PackageReference Include="JunitXml.TestLogger" Version="3.1.12" />
