--- a/BusinessAdapter.MP.Console/BusinessAdapter.MP.Console.csproj
+++ b/BusinessAdapter.MP.Console/BusinessAdapter.MP.Console.csproj
@@ -3,7 +3,7 @@
 	<PropertyGroup>
 		<TargetFramework>net8.0</TargetFramework>
 		<OutputType>Exe</OutputType>
-		<PublishSingleFile>true</PublishSingleFile>
+		<PublishSingleFile>false</PublishSingleFile>
 		<SelfContained>true</SelfContained>
 		<AssemblyName>Schleupen.AS4.BusinessAdapter.MP.Console</AssemblyName>
 		<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
@@ -13,6 +13,7 @@
 	  <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
 	  <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
 	  <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.6" />
+	  <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
 	</ItemGroup>
 	<ItemGroup>
 	  <ProjectReference Include="..\BusinessAdapter.MP\BusinessAdapter.MP.csproj" />
