--- a/BusinessAdapter.MP.UnitTests/BusinessAdapter.MP.UnitTests.csproj
+++ b/BusinessAdapter.MP.UnitTests/BusinessAdapter.MP.UnitTests.csproj
@@ -4,6 +4,7 @@
 		<TargetFramework>net8.0</TargetFramework>
 		<AssemblyName>Schleupen.AS4.BusinessAdapter.MP.UnitTests</AssemblyName>
 		<ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>None</ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>
+		<RootNamespace>Schleupen.AS4.BusinessAdapter.MP</RootNamespace>
 	</PropertyGroup>
 	<ItemGroup>
 	  <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
