harmonize FP + MP Console : commands, BackgroundWorker (#4)
* harmonize FP + MP Console : commands, BackgroundWorker, class names
* documentation: add cli command documentation
* documentation: add Migration section
* documentation: add changelog in documentation
* add additional testcases

--- a/BusinessAdapter.MP.Console/appsettings.Development.json
+++ b/BusinessAdapter.MP.Console/appsettings.Development.json
@@ -1,28 +1,29 @@
 {
   "Adapter": {
-    "As4ConnectEndpoint": "https://erp.prod.as4.schleupen.cloud",
-    "Send": {
-      "Directory": "C:\\Adapter\\Send",
-      "Retry": {
-        "Count": 1,
-        "SleepDuration": "00:00:10"
-      },
-      "MessageLimitCount": 2,
-      "SleepDuration" :  "00:01:00"
-    },
-    "Receive": {
-      "Directory": "C:\\Adapter\\Receive",
-      "Retry": {
-        "Count": 1,
-        "SleepDuration": "00:00:10"
-      },
-      "SleepDuration" :  "00:01:00",
-      "MessageLimitCount": 2
-    },
+    "As4ConnectEndpoint": "https://erp.dev.as4-test.schleupen.cloud",
     "Marketpartners": [
-      "9984617000002"
+      "9984617000002",
+      "9984616000003"
     ],
     "CertificateStoreLocation": "LocalMachine",
     "CertificateStoreName": "My"
+  },
+  "Send": {
+    "Directory": "C:\\Adapter\\Send",
+    "Retry": {
+      "Count": 3,
+      "SleepDuration": "00:00:05"
+    },
+    "MessageLimitCount": 2,
+    "SleepDuration": "00:00:10"
+  },
+  "Receive": {
+    "Directory": "C:\\Adapter\\Receive",
+    "Retry": {
+      "Count": 1,
+      "SleepDuration": "00:00:10"
+    },
+    "SleepDuration": "00:01:00",
+    "MessageLimitCount": 2
   }
 }
