fix root namespaces for integrative tests fix assembly-name Schleupen.AS4.BusinessAdapter.MP.IntegrativeTests

--- a/BusinessAdapter.FP.IntegrativeTests/BusinessAdapter.FP.IntegrativeTests.csproj
+++ b/BusinessAdapter.FP.IntegrativeTests/BusinessAdapter.FP.IntegrativeTests.csproj
@@ -6,6 +6,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <AssemblyName>Schleupen.AS4.BusinessAdapter.FP.IntegrativeTests</AssemblyName>
+        <RootNamespace>Schleupen.AS4.BusinessAdapter.FP</RootNamespace>
     </PropertyGroup>
     <ItemGroup>
     <PackageReference Include="JunitXml.TestLogger" Version="3.1.12" />
