handle status FpMessageType.Status with Version=1 cleanup code

--- a/BusinessAdapter.FP.UnitTests/BusinessAdapter.FP.UnitTests.csproj
+++ b/BusinessAdapter.FP.UnitTests/BusinessAdapter.FP.UnitTests.csproj
@@ -32,5 +32,20 @@
 	  <None Update="Parsing\EICMapping.json">
 	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  </None>
+	  <None Update="Parsing\InvalidFiles\20241114_11XSWSE-DBA-VZRL_10XDE-RWENET---W_02.xml">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
+	  <None Update="Parsing\InvalidFiles\20241115_11XSWSE-DBA-VZRL_10XDE-RWENET---W_01.xml">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
+	  <None Update="Parsing\20241114_SRQ_11XSWSE-DBA-VZRL_10XDE-RWENET---W_CRQ.xml">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
+	  <None Update="Parsing\20241115_SRQ_11XSWSE-DBA-VZRL_10XDE-RWENET---W_CRQ.xml">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
+	  <None Update="Parsing\InvalidFiles\20240125_PPS_FINGRID_0X1001A1001A264_003.xml">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
 	</ItemGroup>
 </Project>
