--- a/BusinessAdapter.UnitTests/BusinessAdapter.UnitTests.csproj
+++ b/BusinessAdapter.UnitTests/BusinessAdapter.UnitTests.csproj
@@ -11,11 +11,8 @@
 	  </None>
 	</ItemGroup>
 	<ItemGroup>
-	  <EmbeddedResource Include="Certificates\Resources\client.pfx" />
 	  <None Remove="Certificates\Resources\MP_AS4.pfx" />
-	  <EmbeddedResource Include="Certificates\Resources\MP_AS4.pfx" />
 	  <None Remove="Certificates\Resources\MP_API.pfx" />
-	  <EmbeddedResource Include="Certificates\Resources\MP_API.pfx" />
 	</ItemGroup>
 	<ItemGroup>
         <PackageReference Include="JunitXml.TestLogger" Version="3.1.12" />
@@ -28,5 +25,13 @@
 	  <ProjectReference Include="..\BusinessAdapter.MP.Console\BusinessAdapter.MP.Console.csproj" />
 	  <ProjectReference Include="..\BusinessAdapter.MP\BusinessAdapter.MP.csproj" />
 	  <ProjectReference Include="..\BusinessAdapter\BusinessAdapter.csproj" />
+	</ItemGroup>
+	<ItemGroup>
+	  <None Remove="Certificates\Resources\client_api_certificate.pfx" />
+	  <EmbeddedResource Include="Certificates\Resources\client_api_certificate.pfx" />
+	  <None Remove="Certificates\Resources\client_as4_certificate.pfx" />
+	  <EmbeddedResource Include="Certificates\Resources\client_as4_certificate.pfx" />
+	  <None Remove="Certificates\Resources\client_unspecific_certificate.pfx" />
+	  <EmbeddedResource Include="Certificates\Resources\client_unspecific_certificate.pfx" />
 	</ItemGroup>
 </Project>
